--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
                 <ol>
                     <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="/about" class="active"><i class="fa fa-user"></i> About</a></li>
-                    <li><a href="/resume"><i class="fa fa-graduation-cap"></i> Edu & Experience</a></li>
+                    <li><i class="fa fa-graduation-cap"></i><a href="/resume" class="oldtxt"> Edu & Experience</a></li>
                 </ol>
             </nav>
         </div>
