--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <ol>
                     <li><a href="/" class="active"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="/about"><i class="fa fa-user"></i> About</a></li>
-                    <li><a href="/resume"><i class="fa fa-graduation-cap"></i> Edu & Experience</a></li>
+                    <li><i class="fa fa-graduation-cap"></i><a href="/resume" class="oldtxt"> Edu & Experience</a></li>
                 </ol>
             </nav>
         </div>
