--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,13 @@
     <title>Portfolio | SK</title>
 </head>
 <body>
-    <section id="home">
+    <section id="home" class="ress">
         <div class="container">
             <nav>
                 <ol>
                     <li><a href="/"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="/about"><i class="fa fa-user"></i> About</a></li>
-                    <li><a href="/resume" class="active"><i class="fa fa-graduation-cap"></i> Edu & Experience</a></li>
+                    <li><i class="fa fa-graduation-cap"></i><a href="/resume" class="active oldtxt"> Edu & Experience</a></li>
                 </ol>
             </nav>
         </div>
